--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,12 @@
     <string name="name" translatable="false">No identificado</string>
     <string name="profit" translatable="false">$0</string>
     <string name="mail" translatable="false">No identificado</string>
+    <string name="fecha_vencimiento" translatable="false">Fecha de Vencimiento</string>
+    <string-array name="bancos">
+        <item>BBVA</item>
+        <item>Galicia</item>
+        <item>ICBC</item>
+        <item>Santander Rio</item>
+    </string-array>
 
 </resources>
